--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.23.5",
     "bootstrap": "^4.3.1",
+    "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.2",
+    "react-virtualized": "^9.21.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
